@@ -619,10 +619,19 @@ value rec parser_of_tree entry nlevn alevn =
           let p1 = parser_of_tree entry nlevn alevn son in
           let p1 = parser_cont p1 entry nlevn alevn s son in
           let p2 = parser_of_tree entry nlevn alevn bro in
-          parser bp
-          [ [: a = ps;
-	       act = p1 bp a ? tree_failed entry a s son :] -> app act a
-          | [: a = p2 :] -> a ]
+          fun (strm : Stream.t _) ->
+            let bp = Stream.count strm in
+            let hd_strm = Stream.npeek 1 strm in
+            match try Some (ps strm) with [ Stream.Failure -> None ] with
+            | Some a ->
+		match
+		  try Some (p1 bp a strm) with [ Stream.Failure -> None ]
+		with
+		| Some act -> app act a
+		| None -> p2 [: Stream.of_list hd_strm; strm :]
+                end
+            | None -> p2 strm
+	    end
       | Some (tokl, (last_tok, vala), son) ->
           let lt =
             let t = Stoken last_tok in
