@@ -634,17 +634,19 @@ let rec parser_of_tree entry nlevn alevn =
           let p1 = parser_of_tree entry nlevn alevn son in
           let p1 = parser_cont p1 entry nlevn alevn s son in
           let p2 = parser_of_tree entry nlevn alevn bro in
-          (fun (strm__ : _ Stream.t) ->
-             let bp = Stream.count strm__ in
-             match try Some (ps strm__) with Stream.Failure -> None with
+          (fun (strm : _ Stream.t) ->
+             let bp = Stream.count strm in
+             let hd_strm = Stream.npeek 1 strm in
+             match try Some (ps strm) with Stream.Failure -> None with
                Some a ->
-                 let act =
-                   try p1 bp a strm__ with
-                     Stream.Failure ->
-                       raise (Stream.Error (tree_failed entry a s son))
-                 in
-                 app act a
-             | _ -> p2 strm__)
+                 begin match
+                   (try Some (p1 bp a strm) with Stream.Failure -> None)
+                 with
+                   Some act -> app act a
+                 | None ->
+                     p2 (Stream.lapp (fun _ -> Stream.of_list hd_strm) strm)
+                 end
+             | None -> p2 strm)
       | Some (tokl, (last_tok, vala), son) ->
           let lt =
             let t = Stoken last_tok in
